--- a/third-grid.html
+++ b/third-grid.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">1</div>
         <div class="main">2</div>
-        <div class="content">
+        <div class="content-box">
                 <div class="title-container">3</div>
                 <div class="box1">1</div>
                 <div class="box2">2</div>
